--- a/LIG4Jogo/src/com/lig4/view/tabuleiro.fxml
+++ b/LIG4Jogo/src/com/lig4/view/tabuleiro.fxml
@@ -319,14 +319,6 @@
             <Font name="Trebuchet MS" size="20.0" />
          </font>
       </Label>
-      <Button fx:id="voltarTab" layoutX="739.0" layoutY="28.0" mnemonicParsing="false" onAction="#btVoltar" prefHeight="19.0" prefWidth="39.0" style="-fx-background-color: #FF1A1A;" textFill="WHITE">
-         <font>
-            <Font size="18.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
       <ImageView fitHeight="26.0" fitWidth="54.0" layoutX="746.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@resources/voltar.png" />
@@ -365,5 +357,13 @@
             <Font name="Trebuchet MS" size="15.0" />
          </font>
       </Label>
+      <Button fx:id="voltarTab" layoutX="739.0" layoutY="28.0" mnemonicParsing="false" onAction="#btVoltar" opacity="0.52" prefHeight="19.0" prefWidth="39.0" style="-fx-background-color: #FF1A1A;" textFill="WHITE">
+         <font>
+            <Font size="18.0" />
+         </font>
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
    </children>
 </AnchorPane>
