--- a/LIG4Jogo/bin/com/lig4/view/ranking.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/ranking.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" style="-fx-background-color: #0066CC;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.rankingController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" style="-fx-background-color: #0066CC;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.controllers.rankingController">
    <children>
       <ImageView fitHeight="558.0" fitWidth="837.0" layoutX="-6.0" layoutY="-3.0" opacity="0.04" pickOnBounds="true" preserveRatio="true">
          <image>
