--- a/LIG4Jogo/bin/com/lig4/view/tabuleiro.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/tabuleiro.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.tabuleiroController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.controllers.tabuleiroController">
    <children>
       <ImageView fx:id="pontosJogador1" fitHeight="550.0" fitWidth="813.0" pickOnBounds="true" preserveRatio="true">
          <image>
