--- a/LIG4Jogo/bin/com/lig4/view/turbo_maluco.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/turbo_maluco.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.main.modoTurboMalucoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.lig4.controllers.modoTurboMalucoController">
    <children>
       <Pane maxWidth="858.0" prefHeight="550.0" prefWidth="858.0" style="-fx-background-color: #0066CC; -fx-background-size: 800;">
          <children>
