--- a/LIG4Jogo/bin/com/lig4/view/ranking.fxml
+++ b/LIG4Jogo/bin/com/lig4/view/ranking.fxml
@@ -36,7 +36,7 @@
          <font>
             <Font name="Trebuchet MS Bold" size="20.0" />
          </font></Label>
-      <Label fx:id="lab7" layoutX="484.0" layoutY="295.0" prefHeight="26.0" prefWidth="51.0" text="Label" textFill="WHITE">
+      <Label fx:id="lab7" layoutX="484.0" layoutY="295.0" text="Label" textFill="WHITE">
          <font>
             <Font name="Trebuchet MS Bold" size="20.0" />
          </font></Label>
